assert(_thread == Thread::current()) failed: thread must be current w/ -XX:+TraceDeoptimization -XX:+Verbose

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b20

      # Internal Error (/Users/vladimir/ws/jdk/ws/jdk9-dev/hotspot/src/share/vm/runtime/handles.inline.hpp:115), pid=38774, tid=13827
      # assert(_thread == Thread::current()) failed: thread must be current

      Stack trace:
      methodHandle::methodHandle(Thread*, Method*)+0x10d
      interpretedVFrame::locals() const+0x14f
      VM_GetOrSetLocal::doit()+0x424
      VM_Operation::evaluate()+0x65
      VMThread::evaluate_operation(VM_Operation*)+0xb9

            Assignee:
            Vladimir Ivanov
            Reporter:
            Vladimir Ivanov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: